--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "chart.js": "^4.0.1",
     "dayjs": "^1.11.7",
     "moment": "^2.29.4",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-notifications": "^1.7.4",
     "react-redux": "^8.0.5",
