--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_BASE_URL=https://reqres.in/
 
-API=https://bic-final-project-be-0-1-0.onrender.com/api/v1
+BASE_URL_API=https://bic-final-project-be-0-1-0.onrender.com/
