--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "capitalize-the-first-letter": "^1.0.8",
     "chart.js": "^4.0.1",
     "dayjs": "^1.11.7",
+    "dotenv": "^16.4.5",
     "moment": "^2.29.4",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
