--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-scripts": "5.0.1",
     "react-tailwindcss-datepicker": "^1.6.0",
     "react-to-print": "^2.15.1",
+    "react-toastify": "^10.0.5",
     "theme-change": "^2.2.0",
     "web-vitals": "^2.1.4"
   },
